--- a/airflow-docker/dockerfile
+++ b/airflow-docker/dockerfile
@@ -7,11 +7,8 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-ADD install_chrome_chromedriver.sh .
-RUN sh install_chrome_chromedriver.sh
-
 # Switch to airflow user before installing Python packages
 USER airflow
-ADD requirements.txt .
+COPY ./airflow-dags/requirements.txt .
 RUN pip install --upgrade setuptools wheel && \
     pip install --no-cache-dir -r requirements.txt
